--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts --exec ts-node",
+    "start": "nodemon index.ts --exec ts-node",
     "build": "tsc",
     "serve": "node dist/index.js"
   },
