--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/moment": "^2.13.0",
+    "@types/puppeteer": "^7.0.4",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "puppeteer": "^22.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
